--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <hr />
         <h2>Other</h2>
         <ul>
-            <li><a href="public/hobby.html">Hobby</a></li>
-            <li><a href="public/contact.html">Contact Me</a></li>
+            <li><a href="hobby.html">Hobby</a></li>
+            <li><a href="contact.html">Contact Me</a></li>
         </ul>
         <footer>
             <p>&copy; M Ihsan Daras hak cipta dilindungi undang-undang</p>
