--- a/index.html
+++ b/index.html
@@ -44,6 +44,20 @@
             <li><a href="hobby.html">Hobby</a></li>
             <li><a href="contact.html">Contact Me</a></li>
         </ul>
+        <h2>My Hobby</h2>
+<p>Futsal</p>
+<p>Play Mobile Legend</p>
+<p>Learning a New Program</p>
+<p>Drive at night</p>
+        <h2>My Contact</h2>
+<h3>My Email</h3>
+<ul>
+    <li>muhammadihsandaras@gmail.com</li>
+</ul>
+<h3>Number Contact</h3>
+<ul>
+    <li>082234354772</li>
+</ul>
         <footer>
             <p>&copy; M Ihsan Daras hak cipta dilindungi undang-undang</p>
         </footer>
